@@ -409,6 +409,7 @@ Alpha 1.17 (started 03/05/23) "Needlefish Update":
 	CHG: Increased the running speed from 192 to 256.
 	CHG: Rescripted bombs with custom entities.
 	CHG: Replaced the parchment font by "capital" (#184).
+	CHG: Player names can now have up to 8 characters.
 	FIX: Fixed the fairy cave teletransporter in the West Mountains linking to a wrong destination (#130).
 	FIX: Fixed changing stream direction not changing sprite direction in the Water Temple (0F) (#55).
 	FIX: Fixed case sensibility issues (#133).
@@ -509,7 +510,7 @@ Alpha 1.17.2 (//23) "Needlefish Update":
 	TDO: Add a HUD version for timers (#36).
 	TDO: Find throwing and holding bomb animations for Hinox sprite (#28).
 	TDO: Add the Tournament of the Strongest (#180).
-	TDO: Remove the tofu characer at the end of the lines in the enter_command_mono font (#184).
+	TDO: Remove the tofu character at the end of the lines in the enter_command_mono font (#184).
 	TDO: Add a climbing state (#188).
 
 Alpha 1.18 (//23) "Opah Update": Musics and sounds
